--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       rel="icon"
       type="image/png"
       sizes="32x32"
-      href="./images/favicon-32x32.png"
+      href="./favicon-32x32.png"
     />
     <link rel="stylesheet" href="/styling.css" />
 
@@ -28,15 +28,15 @@
     </style>
   </head>
   <body>
-    <img id="img1" src="./images/illustration-box-desktop.svg" alt="icon" >
+    <img id="img1" src="./illustration-box-desktop.svg" alt="icon" >
     <div class="content">
-      <img id="img2" src="./images/illustration-woman-online-desktop.svg" alt="svg">
+      <img id="img2" src="./illustration-woman-online-desktop.svg" alt="svg">
       <h1>FAQ</h1>
       <br>
       <div id="FAQ_page_container_1">
         <input type="checkbox" id="toggle1" class="dot" />
         <label for="toggle1"><p class = "std"><b>How many team members can I invite?</b></p></label>
-        <img class="img3" src="./images/icon-arrow-down.svg" alt="icon" >
+        <img class="img3" src="./icon-arrow-down.svg" alt="icon" >
         <div class="slider">
           <p class="std">
             You can invite up to 2 additional users on the Free plan.<br>There is no limit on team members for the Premium plan.
