--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       sizes="32x32"
       href="./favicon-32x32.png"
     />
-    <link rel="stylesheet" href="/styling.css" />
+    <link rel="stylesheet" href="./styling.css" />
 
     <link href=https://fonts.google.com/specimen/Kumbh+Sans rel="stylesheet" >
 
